--- a/index.html
+++ b/index.html
@@ -475,16 +475,16 @@
             <div class="about-section__steps col-12 col-md-8 order-md-last">
               <ul class="about-section__list" data-aos="fade-up">
                 <li class="about-section__item">
-                  <a href="service-detail.html">01 Web Deveopment</a>
+                  <a href="service-detail.html">01 Branding</a>
                 </li>
                 <li class="about-section__item">
-                  <a href="service-detail.html">02 Brand Design</a>
+                  <a href="service-detail.html">02 Social Media </a>
                 </li>
                 <li class="about-section__item">
-                  <a href="service-detail.html">03 WordPress</a>
-                </li>
+                  <a href="service-detail.html">04 Web Development </a>
+                </li> 
                 <li class="about-section__item">
-                  <a href="service-detail.html">04 Photography</a>
+                  <a href="service-detail.html">05 Performance Marketing </a>
                 </li>
               </ul>
             </div>
@@ -570,7 +570,7 @@
         <div class="about-video-section__container container container--size-large">
           <div class="row">
             <div class="about-video-section__main col-12 col-md">
-              <div class="about-video-section__title about-video-section__title--size-small" data-aos="fade-up">Our team consists of practitioners who have 15 years of experience in launching and managing projects. worked with a wide array of clients across the globe to apply design fundamentals of elegance, simplicity</div>
+              <div class="about-video-section__title about-video-section__title--size-small" data-aos="fade-up">We’re a team of design freaks, social kittens, search sherlocks, account managers, and a bunch of talented digital enthusiasts. By constantly evolving and learning, we always find fresh and innovative ways to reach potential customers.</div>
               <div class="row align-items-end" data-aos="fade-up">
                 <div class="col-4 col-md-5 col-xl-4">
                   <a class="about-video-section__more arrow-link" href="about-us.html">
