--- a/about-us.html
+++ b/about-us.html
@@ -20,7 +20,7 @@
 
 <body class="webpage">
   <div style="display: none">
-    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+    <svg xmlns="https://www.w3.org/2000/svg" xmlns:xlink="https://www.w3.org/1999/xlink">
       <symbol id="link-arrow2" viewBox="0 0 24 23">
         <path d="M3.464 0v3.425h14.66L0 20.585 2.43 23 20.554 5.84v14.57H24V0H3.464z" />
       </symbol>
