--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- CSS-->
   <link rel="stylesheet" href="css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="css/main.css">
-  <title>Centrix | Agency Modern</title>
+  <title>Reboot Media House | Digital Agency</title>
 </head>
 
 <body class="webpage webpage--bg-white">
@@ -115,7 +115,7 @@
           <nav class="mobile-canvas__nav navigation">
             <ul class="navigation__list">
               <li class="navigation__item navigation__item--current">
-                <a class="navigation__link" href="agency-default.html">Home<span class="navigation__link-icon">
+                <a class="navigation__link" href="index.html">Home<span class="navigation__link-icon">
                     <svg width="12" height="13">
                       <use xlink:href="#link-arrow"></use>
                     </svg>
@@ -191,7 +191,7 @@
                 </div>
               </li>
               <li class="navigation__item">
-                <a class="navigation__link animsition-link" href="about-us.html">Pages<span class="navigation__link-icon">
+                <a class="navigation__link animsition-link" href="about-us.html">Projects<span class="navigation__link-icon">
                     <svg width="12" height="13">
                       <use xlink:href="#link-arrow"></use>
                     </svg>
@@ -275,7 +275,7 @@
                 </div>
               </li>
               <li class="navigation__item">
-                <a class="navigation__link animsition-link" href="projects-masonry.html">Projects<span class="navigation__link-icon">
+                <a class="navigation__link animsition-link" href="projects-masonry.html">Services<span class="navigation__link-icon">
                     <svg width="12" height="13">
                       <use xlink:href="#link-arrow"></use>
                     </svg>
@@ -319,7 +319,7 @@
                 </div>
               </li>
               <li class="navigation__item">
-                <a class="navigation__link animsition-link" href="blog-masonry.html">Blog<span class="navigation__link-icon">
+                <a class="navigation__link animsition-link" href="blog-masonry.html">About us<span class="navigation__link-icon">
                     <svg width="12" height="13">
                       <use xlink:href="#link-arrow"></use>
                     </svg>
