--- a/about-reboot.html
+++ b/about-reboot.html
@@ -15,7 +15,7 @@
   <!-- CSS-->
   <link rel="stylesheet" href="css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="css/main.css">
-  <title>Reboot Media House | Digital Marketing Agency</title>
+  <title> ABOUT | Reboot Media House</title>
 </head>
 
 <body class="webpage">
