--- a/reboot-projects.html
+++ b/reboot-projects.html
@@ -15,7 +15,7 @@
   <!-- CSS-->
   <link rel="stylesheet" href="css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="css/main.css">
-  <title>Reboot Media House | Digital Marketing Agency</title>
+  <title> PROJECTS | Reboot Media House </title>
 </head>
 
 <body class="webpage">
@@ -105,7 +105,7 @@
   <div class="animsition">
     <header class="header header--absolute __js_fixed-header">
       <div class="header__container container container--size-large">
-        <a class="header__logo logo" href="agency-default.html">
+        <a class="header__logo logo" href="index.html">
           <svg width="76" height="19">
             <use xlink:href="#logo"></use>
           </svg>
@@ -114,13 +114,13 @@
           <nav class="mobile-canvas__nav navigation">
             <ul class="navigation__list">
               <li class="navigation__item">
-                <a class="navigation__link animsition-link" href="agency-default.html">Home<span class="navigation__link-icon">
+                <a class="navigation__link animsition-link" href="index.html">Home<span class="navigation__link-icon">
                     <svg width="12" height="13">
                       <use xlink:href="#link-arrow"></use>
                     </svg>
                   </span>
                 </a>
-                <div class="navigation__dropdown">
+                <!-- <div class="navigation__dropdown">
                   <ul class="navigation__dropdown-list">
                     <li class="navigation__dropdown-item">
                       <a class="animsition-link" href="agency-default.html">Agency default<span class="navigation__dropdown-icon">
@@ -187,7 +187,7 @@
                       </a>
                     </li>
                   </ul>
-                </div>
+                </div> -->
               </li>
               
               <li class="navigation__item navigation__item--current">
@@ -235,7 +235,7 @@
                 </div> -->
               </li>
               <li class="navigation__item">
-                <a class="navigation__link animsition-link" href="about-us.html">Services<span class="navigation__link-icon">
+                <a class="navigation__link animsition-link" href="team.html">Team<span class="navigation__link-icon">
                     <svg width="12" height="13">
                       <use xlink:href="#link-arrow"></use>
                     </svg>
@@ -319,16 +319,16 @@
                 </div> -->
               </li>
               <li class="navigation__item">
-                <a class="navigation__link animsition-link" href="blog-masonry.html">Blog<span class="navigation__link-icon">
+                <a class="navigation__link animsition-link" href="blog-masonry.html">Why us <span class="navigation__link-icon">
                     <svg width="12" height="13">
                       <use xlink:href="#link-arrow"></use>
                     </svg>
                   </span>
                 </a>
-                <div class="navigation__dropdown">
+                <!-- <div class="navigation__dropdown">
                   <ul class="navigation__dropdown-list">
                     <li class="navigation__dropdown-item">
-                      <a class="animsition-link" href="blog-masonry.html">Masonry<span class="navigation__dropdown-icon">
+                      <a class="animsition-link" href="team.html">Team<span class="navigation__dropdown-icon">
                           <svg width="12" height="13">
                             <use xlink:href="#link-arrow"></use>
                           </svg>
@@ -360,7 +360,7 @@
                       </a>
                     </li>
                   </ul>
-                </div>
+                </div> -->
               </li>
               <li class="navigation__item">
                 <a class="navigation__link animsition-link" href="contact.html">Contact<span class="navigation__link-icon">
@@ -552,9 +552,9 @@
       <div class="footer__container container container--size-large">
         <div class="footer__grid">
           <a class="footer__logo" href="agency-default.html">
-            <svg width="59" height="242">
+            <!-- <svg width="59" height="242">
               <use xlink:href="#vertical-logo"></use>
-            </svg>
+            </svg> -->
           </a>
           <div class="footer__phone">
             <a href="tel:+34255216021">+3(425) 521 60 21</a>
@@ -612,7 +612,7 @@
             <div class="footer__feedback-notice">This site is protected by reCAPTHCHA and the <a href="#" target="_blank">Google Privacy Policy</a> and <a href="#" target="_blank">Terms of Service apply</a>.</div>
           </div>
           <div class="footer__bottom">
-            <div class="footer__copyright">© Centrix 2021. All Rights Resevered</div>
+            <div class="footer__copyright">© Reboot Media House . All Rights Resevered</div>
             <a class="footer__privacy" href="#">Privacy Policy</a>
           </div>
         </div>
