home page updates

--- a/index.html
+++ b/index.html
@@ -580,15 +580,15 @@
               </a>
             </li>
             <li class="social__item">
-              <a class="social__link" href="#" target="_blank">
+              <a class="social__link" href="https://www.facebook.com/profile.php?id=100075777226353&mibextid=ZbWKwL" target="_blank">
                 <svg width="20" height="20" aria-label="facebook icon">
                   <use xlink:href="#facebook"></use>
                 </svg>
-                <span class="visually-hidden">facebook</span>
+                <!-- <span class="visually-hidden">facebook</span> -->
               </a>
             </li>
             <li class="social__item">
-              <a class="social__link" href="#" target="_blank">
+              <a class="social__link" href="https://instagram.com/rebootmediahouse?igshid=YmMyMTA2M2Y=" target="_blank">
                 <svg width="20" height="20" aria-label="instagram icon">
                   <use xlink:href="#instagram"></use>
                 </svg>
@@ -597,10 +597,10 @@
             </li>
             <li class="social__item">
               <a class="social__link" href="#" target="_blank">
-                <svg width="20" height="20" aria-label="twitter icon">
+                <svg width="20" height="20" aria-label="linkedin icon">
                   <use xlink:href="#twitter"></use>
                 </svg>
-                <span class="visually-hidden">twitter</span>
+                <span class="visually-hidden">linkedin</span>
               </a>
             </li>
           </ul>
@@ -672,16 +672,16 @@
             <div class="about-section__steps col-12 col-md-8 order-md-last">
               <ul class="about-section__list" data-aos="fade-up">
                 <li class="about-section__item">
-                  <a href="service-detail.html">01 Branding</a>
+                  <a href="service-detail.html">01  social media managment</a>
                 </li>
                 <li class="about-section__item">
-                  <a href="service-detail.html">02 Social Media </a>
+                  <a href="service-detail.html">02  social media advertisement  </a>
                 </li>
                 <li class="about-section__item">
-                  <a href="service-detail.html">04 Web Development </a>
+                  <a href="service-detail.html">03  outdoor campaign </a>
                 </li> 
                 <li class="about-section__item">
-                  <a href="service-detail.html">05 Performance Marketing </a>
+                  <a href="service-detail.html">04  SEO SEM </a>
                 </li>
               </ul>
             </div>
@@ -709,10 +709,10 @@
             <div class="swiper-wrapper">
               <a class="carousel__item project-preview swiper-slide" href="single-project.html">
                 <span class="project-preview__image">
-                  <img src="img/picture/carousel/8.jpg" width="720" height="548" alt="swiss typography">
+                  <img src="img/picture/carousel/8.png" width="720" height="548" alt="swiss typography">
                 </span>
                 <span class="project-preview__bottom">
-                  <span class="project-preview__title">Swiss typography</span>
+                  <span class="project-preview__title">Samarthya heights teaser campaign</span>
                   <span class="project-preview__icon">
                     <svg width="24" height="23">
                       <use xlink:href="#link-arrow2"></use>
@@ -722,10 +722,10 @@
               </a>
               <a class="carousel__item project-preview swiper-slide" href="single-project.html">
                 <span class="project-preview__image">
-                  <img src="img/picture/carousel/9.jpg" width="334" height="255" alt="the act">
+                  <img src="img/picture/carousel/9.png" width="720" height="548" alt="the act">
                 </span>
                 <span class="project-preview__bottom">
-                  <span class="project-preview__title">The act</span>
+                  <span class="project-preview__title">SAMARTHYA HEIGHTS REVEAL CAMPAIGN</span>
                   <span class="project-preview__icon">
                     <svg width="24" height="23">
                       <use xlink:href="#link-arrow2"></use>
@@ -735,10 +735,10 @@
               </a>
               <a class="carousel__item project-preview swiper-slide" href="single-project.html">
                 <span class="project-preview__image">
-                  <img src="img/picture/carousel/10.jpg" width="404" height="494" alt="Copenhagen">
+                  <img src="img/picture/carousel/11.png" width="720" height="548" alt="Copenhagen">
                 </span>
                 <span class="project-preview__bottom">
-                  <span class="project-preview__title">Copenhagen</span>
+                  <span class="project-preview__title">Roccia Adventure Park</span>
                   <span class="project-preview__icon">
                     <svg width="24" height="23">
                       <use xlink:href="#link-arrow2"></use>
@@ -746,7 +746,7 @@
                   </span>
                 </span>
               </a>
-              <a class="carousel__item project-preview swiper-slide" href="single-project.html">
+              <!-- <a class="carousel__item project-preview swiper-slide" href="single-project.html">
                 <span class="project-preview__image">
                   <img src="img/picture/carousel/11.jpg" width="434" height="321" alt="Mobile app">
                 </span>
@@ -758,7 +758,7 @@
                     </svg>
                   </span>
                 </span>
-              </a>
+              </a> -->
             </div>
           </div>
         </div>
@@ -801,24 +801,24 @@
             <div class="row justify-content-between">
               <div class="statistics__item col-6 col-md-auto" data-aos="fade-up">
                 <div class="statistics__item-value">
-                  <span class="__js_number" data-end-value="25">0</span>
+                  <span class="__js_number" data-end-value="15">0</span>
                 </div>
-                <div class="statistics__item-text">managers</div>
+                <div class="statistics__item-text">Happy <br>Clients </div>
               </div>
               <div class="statistics__item col-6 col-md-auto" data-aos="fade-up">
                 <div class="statistics__item-value">
                   <span class="__js_number" data-end-value="200">0</span>
                 </div>
-                <div class="statistics__item-text">the person
-                  <br>in the team
+                <div class="statistics__item-text">Successful
+                  <br>Campaigns
                 </div>
               </div>
               <div class="statistics__item col-6 col-md-auto" data-aos="fade-up">
                 <div class="statistics__item-value">
-                  <span class="__js_number" data-end-value="15">0</span>
+                  <span class="__js_number" data-end-value="20">0</span><h1 class="statistics__item-text ">lac +</h1>
                 </div>
-                <div class="statistics__item-text">Years
-                  <br>experience
+                <div class="statistics__item-text">people
+                  <br>reached
                 </div>
               </div>
               <div class="statistics__item col-6 col-md-auto" data-aos="fade-up">
@@ -843,8 +843,8 @@
                   <img src="img/picture/team/1.jpg" width="385" height="548" alt="Sam Flex photo">
                 </div>
                 <div class="member-card__info">
-                  <div class="member-card__title">Sam Flex</div>
-                  <div class="member-card__post">Director</div>
+                  <div class="member-card__title">Yash Dave </div>
+                  <div class="member-card__post">Director, Performance Marketing Lead</div>
                   <!-- Social-->
                   <ul class="member-card__social social--hover-white social">
                     <li class="social__item">
@@ -878,11 +878,11 @@
             <div class="team-section__item">
               <div class="member-card" data-aos="fade-up">
                 <div class="member-card__image">
-                  <img src="img/picture/team/2.jpg" width="355" height="241" alt="Kate Larson photo">
+                  <img src="img/picture/team/1.jpg" width="355" height="241" alt="Kate Larson photo">
                 </div>
                 <div class="member-card__info">
-                  <div class="member-card__title">Kate Larson</div>
-                  <div class="member-card__post">Manager</div>
+                  <div class="member-card__title">Shraddha Dave</div>
+                  <div class="member-card__post">Director, Creative Director</div>
                   <!-- Social-->
                   <ul class="member-card__social social--hover-white social">
                     <li class="social__item">
@@ -916,10 +916,48 @@
             <div class="team-section__item">
               <div class="member-card" data-aos="fade-up">
                 <div class="member-card__image">
-                  <img src="img/picture/team/3.jpg" width="474" height="450" alt="Bobby Fish photo">
+                  <img src="img/picture/team/1.jpg" width="474" height="450" alt="Bobby Fish photo">
                 </div>
                 <div class="member-card__info">
-                  <div class="member-card__title">Bobby Fish</div>
+                  <div class="member-card__title">Dileep Singh</div>
+                  <div class="member-card__post">Motion Designer, Full Stack Web Developer </div>
+                  <!-- Social-->
+                  <ul class="member-card__social social--hover-white social">
+                    <li class="social__item">
+                      <a class="social__link" href="#" target="_blank">
+                        <svg width="20" height="20" aria-label="linkedin icon">
+                          <use xlink:href="#linkedin"></use>
+                        </svg>
+                        <span class="visually-hidden">linkedin</span>
+                      </a>
+                    </li>
+                    <li class="social__item">
+                      <a class="social__link" href="#" target="_blank">
+                        <svg width="20" height="20" aria-label="facebook icon">
+                          <use xlink:href="#facebook"></use>
+                        </svg>
+                        <span class="visually-hidden">facebook</span>
+                      </a>
+                    </li>
+                    <li class="social__item">
+                      <a class="social__link" href="#" target="_blank">
+                        <svg width="20" height="20" aria-label="twitter icon">
+                          <use xlink:href="#twitter"></use>
+                        </svg>
+                        <span class="visually-hidden">twitter</span>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="team-section__item">
+              <div class="member-card" data-aos="fade-up">
+                <div class="member-card__image">
+                  <img src="img/picture/team/1.jpg" width="474" height="450" alt="Bobby Fish photo">
+                </div>
+                <div class="member-card__info">
+                  <div class="member-card__title">Parita Jhaveri</div>
                   <div class="member-card__post">Designer</div>
                   <!-- Social-->
                   <ul class="member-card__social social--hover-white social">
@@ -954,11 +992,11 @@
             <div class="team-section__item">
               <div class="member-card" data-aos="fade-up">
                 <div class="member-card__image">
-                  <img src="img/picture/team/4.jpg" width="326" height="548" alt="Amanda James photo">
+                  <img src="img/picture/team/1.jpg" width="326" height="548" alt="Amanda James photo">
                 </div>
                 <div class="member-card__info">
-                  <div class="member-card__title">Amanda James</div>
-                  <div class="member-card__post">Programmer</div>
+                  <div class="member-card__title">Priyanshu saroj</div>
+                  <div class="member-card__post">Social Media Manager </div>
                   <!-- Social-->
                   <ul class="member-card__social social--hover-white social">
                     <li class="social__item">
@@ -1046,22 +1084,22 @@
             <div class="start-project__partners partners partners--no-padding col-12 col-lg-4">
               <ul class="partners__list row align-items-center">
                 <li class="partners__item col-12 col-sm-6 col-md-3 col-lg-12 col-xl-6" data-aos="fade-up">
-                  <img src="img/picture/partners/1.png" width="117" height="47" alt="behr handelsagentur">
+                  <img src="img/picture/partners/1.png" width="209" height="103" alt="behr handelsagentur">
                 </li>
                 <li class="partners__item col-12 col-sm-6 col-md-3 col-lg-12 col-xl-6" data-aos="fade-up">
-                  <img src="img/picture/partners/2.png" width="139" height="68" alt="christopher willis">
+                  <img src="img/picture/partners/2.png" width="209" height="103" alt="christopher willis">
                 </li>
                 <li class="partners__item col-12 col-sm-6 col-md-3 col-lg-12 col-xl-6" data-aos="fade-up">
-                  <img src="img/picture/partners/3.png" width="150" height="45" alt="artchive crafts gallery">
+                  <img src="img/picture/partners/3.png" width="209" height="103" alt="artchive crafts gallery">
                 </li>
                 <li class="partners__item col-12 col-sm-6 col-md-3 col-lg-12 col-xl-6" data-aos="fade-up">
-                  <img src="img/picture/partners/4.png" width="125" height="32" alt="artchive crasfts gallery">
+                  <img src="img/picture/partners/4.png" width="209" height="103" alt="artchive crasfts gallery">
                 </li>
                 <li class="partners__item col-12 col-sm-6 col-md-3 col-lg-12 col-xl-6" data-aos="fade-up">
-                  <img src="img/picture/partners/5.png" width="104" height="38" alt="neuton interactive">
+                  <img src="img/picture/partners/5.png" width="209" height="103" alt="neuton interactive">
                 </li>
                 <li class="partners__item col-12 col-sm-6 col-md-3 col-lg-12 col-xl-6" data-aos="fade-up">
-                  <img src="img/picture/partners/6.png" width="134" height="29" alt="francoins redblade">
+                  <img src="img/picture/partners/6.png" width="209" height="103" alt="francoins redblade">
                 </li>
               </ul>
             </div>
@@ -1078,20 +1116,20 @@
             </svg>
           </a> -->
           <div class="footer__phone">
-            <a href="tel:+34255216021">+3(425) 521 60 21</a>
+            <a href="tel:+34255216021">+91 91067 05855</a>
           </div>
           <div class="footer__menu">
             <div class="footer__title">Quick Links</div>
             <ul class="footer__menu-list">
               <li class="footer__menu-item">
-                <a class="footer__menu-link" href="agency-default.html">Home</a>
+                <a class="footer__menu-link" href="index.html">Home</a>
               </li>
               <li class="footer__menu-item">
                 <a class="footer__menu-link" href="team.html">Team</a>
               </li>
-              <li class="footer__menu-item">
+              <!-- <li class="footer__menu-item">
                 <a class="footer__menu-link" href="blog-masonry.html">Blog</a>
-              </li>
+              </li> -->
               <li class="footer__menu-item">
                 <a class="footer__menu-link" href="contact.html">Contact</a>
               </li>
@@ -1104,16 +1142,14 @@
             <div class="footer__title">Follow</div>
             <ul class="footer__menu-list">
               <li class="footer__menu-item">
-                <a class="footer__menu-link" href="#">Facebook</a>
+                <a class="footer__menu-link" href="https://www.facebook.com/profile.php?id=100075777226353&mibextid=ZbWKwL">Facebook</a>
+              </li>
+              
+              <li class="footer__menu-item">
+                <a class="footer__menu-link" href="https://instagram.com/rebootmediahouse?igshid=YmMyMTA2M2Y=">Instagram</a>
               </li>
               <li class="footer__menu-item">
-                <a class="footer__menu-link" href="#">Twitter</a>
-              </li>
-              <li class="footer__menu-item">
-                <a class="footer__menu-link" href="#">Instagram</a>
-              </li>
-              <li class="footer__menu-item">
-                <a class="footer__menu-link" href="#">LinkedIn</a>
+                <a class="footer__menu-link" href="https://www.linkedin.com/company/reboot-media-house/">LinkedIn</a>
               </li>
             </ul>
           </div>
