--- a/index.html
+++ b/index.html
@@ -647,7 +647,7 @@
           </div>
         </div>
       </section>
-      <section class="about-section">
+      <!-- <section class="about-section">
         <div class="about-section__container container container--size-large">
           <div class="row g-0">
             <div class="about-section__main col-12 col-md-4 order-1">
@@ -684,6 +684,77 @@
                   <a href="service-detail.html">04  SEO SEM </a>
                 </li>
               </ul>
+            </div>
+          </div>
+        </div>
+      </section> -->
+      
+      <section class="about-video-section about-video-section--pb-0">
+        <div class="about-video-section__container container container--size-large">
+          <div class="row">
+            <div class="about-video-section__main col-12 col-md">
+              <div class="about-video-section__title about-video-section__title--size-small" data-aos="fade-up">We’re a team of design freaks, social kittens, search sherlocks, account managers, and a bunch of talented digital enthusiasts. By constantly evolving and learning, we always find fresh and innovative ways to reach potential customers.</div>
+              <div class="row align-items-end" data-aos="fade-up">
+                <div class="col-4 col-md-5 col-xl-4">
+                  <a class="about-video-section__more arrow-link" href="about-us.html">
+                    <span class="arrow-link__text">About us</span>
+                    <span class="arrow-link__icon">
+                      <svg width="75" height="75">
+                        <use xlink:href="#link-arrow"></use>
+                      </svg>
+                    </span>
+                  </a>
+                </div>
+                <div class="col-8 col-md-7 col-xl-8">
+                  <div class="about-video-section__text">We make our customers ' products valuable in the eyes of customers. To do this, we analyze and study people, build long-term strategies for interacting with them, develop creative ideas and create a bright design. We use all opportunities to solve business problems.</div>
+                </div>
+              </div>
+            </div>
+            <div class="about-video-section__aside col-12 col-md order-first order-md-0" data-aos="fade-up">
+              <div class="about-video-section__video video-block">
+                <img src="img/picture/common/video-poster-2.jpg" width="810" height="539" alt="About us video">
+                <a class="video-block__btn play-btn" data-fancybox href="https://www.youtube.com/watch?v=_sI_Ps7JSEk" aria-label="Play button">
+                  <svg width="17" height="19">
+                    <use xlink:href="#triangle"></use>
+                  </svg>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="about-video-section__statistics statistics">
+          <div class="statistics__container container">
+            <div class="row justify-content-between">
+              <div class="statistics__item col-6 col-md-auto" data-aos="fade-up">
+                <div class="statistics__item-value">
+                  <span class="__js_number" data-end-value="15">0</span>
+                </div>
+                <div class="statistics__item-text">Happy <br>Clients </div>
+              </div>
+              <div class="statistics__item col-6 col-md-auto" data-aos="fade-up">
+                <div class="statistics__item-value">
+                  <span class="__js_number" data-end-value="200">0</span>
+                </div>
+                <div class="statistics__item-text">Successful
+                  <br>Campaigns
+                </div>
+              </div>
+              <div class="statistics__item col-6 col-md-auto" data-aos="fade-up">
+                <div class="statistics__item-value">
+                  <span class="__js_number" data-end-value="20">0</span><h1 class="statistics__item-text ">lac +</h1>
+                </div>
+                <div class="statistics__item-text">people
+                  <br>reached
+                </div>
+              </div>
+              <div class="statistics__item col-6 col-md-auto" data-aos="fade-up">
+                <div class="statistics__item-value">
+                  <span class="__js_number" data-end-value="7">0</span>
+                </div>
+                <div class="statistics__item-text">awards and
+                  <br>accolades
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -759,76 +830,6 @@
                   </span>
                 </span>
               </a> -->
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="about-video-section about-video-section--pb-0">
-        <div class="about-video-section__container container container--size-large">
-          <div class="row">
-            <div class="about-video-section__main col-12 col-md">
-              <div class="about-video-section__title about-video-section__title--size-small" data-aos="fade-up">We’re a team of design freaks, social kittens, search sherlocks, account managers, and a bunch of talented digital enthusiasts. By constantly evolving and learning, we always find fresh and innovative ways to reach potential customers.</div>
-              <div class="row align-items-end" data-aos="fade-up">
-                <div class="col-4 col-md-5 col-xl-4">
-                  <a class="about-video-section__more arrow-link" href="about-us.html">
-                    <span class="arrow-link__text">About us</span>
-                    <span class="arrow-link__icon">
-                      <svg width="75" height="75">
-                        <use xlink:href="#link-arrow"></use>
-                      </svg>
-                    </span>
-                  </a>
-                </div>
-                <div class="col-8 col-md-7 col-xl-8">
-                  <div class="about-video-section__text">We make our customers ' products valuable in the eyes of customers. To do this, we analyze and study people, build long-term strategies for interacting with them, develop creative ideas and create a bright design. We use all opportunities to solve business problems.</div>
-                </div>
-              </div>
-            </div>
-            <div class="about-video-section__aside col-12 col-md order-first order-md-0" data-aos="fade-up">
-              <div class="about-video-section__video video-block">
-                <img src="img/picture/common/video-poster-2.jpg" width="810" height="539" alt="About us video">
-                <a class="video-block__btn play-btn" data-fancybox href="https://www.youtube.com/watch?v=_sI_Ps7JSEk" aria-label="Play button">
-                  <svg width="17" height="19">
-                    <use xlink:href="#triangle"></use>
-                  </svg>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="about-video-section__statistics statistics">
-          <div class="statistics__container container">
-            <div class="row justify-content-between">
-              <div class="statistics__item col-6 col-md-auto" data-aos="fade-up">
-                <div class="statistics__item-value">
-                  <span class="__js_number" data-end-value="15">0</span>
-                </div>
-                <div class="statistics__item-text">Happy <br>Clients </div>
-              </div>
-              <div class="statistics__item col-6 col-md-auto" data-aos="fade-up">
-                <div class="statistics__item-value">
-                  <span class="__js_number" data-end-value="200">0</span>
-                </div>
-                <div class="statistics__item-text">Successful
-                  <br>Campaigns
-                </div>
-              </div>
-              <div class="statistics__item col-6 col-md-auto" data-aos="fade-up">
-                <div class="statistics__item-value">
-                  <span class="__js_number" data-end-value="20">0</span><h1 class="statistics__item-text ">lac +</h1>
-                </div>
-                <div class="statistics__item-text">people
-                  <br>reached
-                </div>
-              </div>
-              <div class="statistics__item col-6 col-md-auto" data-aos="fade-up">
-                <div class="statistics__item-value">
-                  <span class="__js_number" data-end-value="7">0</span>
-                </div>
-                <div class="statistics__item-text">awards and
-                  <br>accolades
-                </div>
-              </div>
             </div>
           </div>
         </div>
