--- a/index.html
+++ b/index.html
@@ -303,10 +303,11 @@
   <div class="animsition">
     <header class="header header--absolute header--separator header--bg-white __js_fixed-header">
       <div class="header__container container container--size-large">
+        <img id= "logo" src="img/logo.png" width="175" height="50" alt="reboot logo">
         <a class="header__logo logo">
-          <!-- <svg width="76" height="19">
+          <!-- <img width="200" height="19"> -->
             <use xlink:href="#logo"></use>
-          </svg> -->
+        </img>
         </a>
         <div class="header__mobile mobile-canvas">
           <nav class="mobile-canvas__nav navigation">
@@ -471,13 +472,7 @@
                   </ul>
                 </div> -->
               </li>
-              <li class="navigation__item">
-                <a class="navigation__link animsition-link" href="team.html">Team<span class="navigation__link-icon">
-                    <svg width="12" height="13">
-                      <use xlink:href="#link-arrow"></use>
-                    </svg>
-                  </span>
-                </a>
+              
                 <!-- <div class="navigation__dropdown">
                   <ul class="navigation__dropdown-list">
                     <li class="navigation__dropdown-item">
@@ -514,7 +509,7 @@
                     </li>
                   </ul>
                 </div> -->
-              </li>
+              
               <li class="navigation__item">
                 <a class="navigation__link animsition-link" href="about-reboot.html">Why us<span class="navigation__link-icon">
                     <svg width="12" height="13">
