--- a/reboot-projects.html
+++ b/reboot-projects.html
@@ -234,13 +234,7 @@
                   </ul>
                 </div> -->
               </li>
-              <li class="navigation__item">
-                <a class="navigation__link animsition-link" href="team.html">Team<span class="navigation__link-icon">
-                    <svg width="12" height="13">
-                      <use xlink:href="#link-arrow"></use>
-                    </svg>
-                  </span>
-                </a>
+              
                 <!-- <div class="navigation__dropdown">
                   <ul class="navigation__dropdown-list">
                     <li class="navigation__dropdown-item">
@@ -317,9 +311,9 @@
                     </li>
                   </ul>
                 </div> -->
-              </li>
+             
               <li class="navigation__item">
-                <a class="navigation__link animsition-link" href="blog-masonry.html">Why us <span class="navigation__link-icon">
+                <a class="navigation__link animsition-link" href="about-reboot.html">Why us <span class="navigation__link-icon">
                     <svg width="12" height="13">
                       <use xlink:href="#link-arrow"></use>
                     </svg>
