--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
               </h1>
             </header>
             <div class="modern-hero__content col-6 col-md-3">
-              <a class="modern-hero__btn round-button round-button--mobile-small" href="#">
+              <a class="" href="#">
                 <!-- <span class="round-button__circle">
                   <svg width="251" height="251">
                     <use xlink:href="#circle-text"></use>
